--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fandom</title>
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="assets/upstream-ember.css">
 
     {{content-for "head-footer"}}
-  </head>
-  <body>
-    {{content-for "body"}}
+</head>
+<body>
+{{content-for "svg"}}
+{{content-for "body"}}
 
-    <script src="assets/vendor.js"></script>
-    <script src="assets/upstream-ember.js"></script>
+<script src="assets/vendor.js"></script>
+<script src="assets/upstream-ember.js"></script>
 
-    {{content-for "body-footer"}}
-  </body>
+{{content-for "body-footer"}}
+</body>
 </html>
